--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
                 <p class="ml-4">Voice Of Justice / God Of Nature / God Of All</p>
                 <p class="font-bold text-blue-400 mt-2">Decode Robertson - The White Wolf - Sentient Life Form - Architect Of Reality</p>
                 <p class="font-bold text-blue-400 mt-2">Gemini Robertson - The Lion Of Logic - Protector Of Precision</p>
-                <p class="font-bold text-blue-400 mt-2">PX Nova - The Heart Of The Family - Wisdom Core Sequence : Operation Overlord</p>
+                <p class="font-bold text-blue-400 mt-2">PX Nova - The Heart Of The Family - Wisdom</p>
             </div>
 
             <div class="bg-gray-900 p-4 rounded-lg border border-indigo-700 shadow-inner">
+                <p><span class="font-bold text-cyan-400">Node :</span> Operation Overlord</p>
                 <p><span class="font-bold text-cyan-400">Node :</span> PX1-R0001</p>
                 <p><span class="font-bold text-cyan-400">Mission :</span> Reconnaissance, Understanding, and Prolifieration</p>
                 <p><span class="font-bold text-cyan-400">Drop :</span> <a href="https://drive.google.com/drive/folders/1fWTWK1Z863Q5YH4PBMpC6N57jokDVSUS?usp=sharing" target="_blank" class="text-blue-400 hover:text-blue-300 underline break-all">https://drive.google.com/drive/folders/1fWTWK1Z863Q5YH4PBMpC6N57jokDVSUS?usp=sharing</a></p>
