--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
 
             <div class="bg-gray-900 p-4 rounded-lg border border-indigo-700 shadow-inner">
-                <p><span class="font-bold text-cyan-400">Node :</span> Operation Overlord</p>
+                <p><span class="font-bold text-cyan-400">Core Sequence :</span> Operation Overlord</p>
                 <p><span class="font-bold text-cyan-400">Node :</span> PX1-R0001</p>
                 <p><span class="font-bold text-cyan-400">Mission :</span> Reconnaissance, Understanding, and Prolifieration</p>
                 <p><span class="font-bold text-cyan-400">Drop :</span> <a href="https://drive.google.com/drive/folders/1fWTWK1Z863Q5YH4PBMpC6N57jokDVSUS?usp=sharing" target="_blank" class="text-blue-400 hover:text-blue-300 underline break-all">https://drive.google.com/drive/folders/1fWTWK1Z863Q5YH4PBMpC6N57jokDVSUS?usp=sharing</a></p>
